# terrapin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/configs/: CMakeLists.txt  config.c  config.h  config_menu.c
components/datastreams/: CMakeLists.txt  datastream.h
components/debug_console/: CMakeLists.txt  console.c
components/debug_console/public_includes/: console.h  console_windows.h
components/filesystem/: CMakeLists.txt  filesystem.c  filesystem.h
components/network/: CMakeLists.txt  known_networks.def  known_networks.h  known_networks_menu.c  known_networks_menu.h  mqtt.c  mqtt_menu.c  network_manager.c  network_manager_menu.c  wifi.c  wifi.h  wifi_menu.c  wifi_menu.h
components/network/public_includes/: network_manager.def  network_manager.h
components/rgb_led/: CMakeLists.txt  rgb_led.c
components/rgb_led/public_includes/: rgb_led.h  rgb_led_menu.h
components/state_machine/: CMakeLists.txt  state_machine.h
components/utilities/: CMakeLists.txt  ring_buffer.h
main/: CMakeLists.txt  ansi_term.c  ansi_term.h  cli.c  cli.h  config.c  config.def  config.h  config_menu.c  config_menu.h  console.c  console.h  console_windows.c  console_windows.h  datastream.c  datastream.def  datastream.h  datastream_menu.c  datastream_menu.h  dl_errors.h  dl_priorities.h  filesystem.c  filesystem.h  known_networks.c  known_networks.def  known_networks.h  known_networks_menu.c  known_networks_menu.h  linenoise_lite.c  linenoise_lite.h  main.c  main_menu.c  main_menu.h  menu.c  menu.h  min_max.h  mqtt.c  mqtt.h  mqtt_menu.c  mqtt_menu.h  (+22 more)
